--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -255,8 +255,8 @@ a:hover {
     padding-top: 15px !important;
     border: none !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 
 }
 #myNavbar {
@@ -271,14 +271,14 @@ a:hover {
     position: absolute;
     left: 0;
     a {
-     -webkit-touch-callout: none;
-     -webkit-user-select: none;
-     -khtml-user-select: none;
-     -moz-user-select: none;
-     -ms-user-select: none;
-     user-select: none;
- }
- .nav {
+       -webkit-touch-callout: none;
+       -webkit-user-select: none;
+       -khtml-user-select: none;
+       -moz-user-select: none;
+       -ms-user-select: none;
+       user-select: none;
+   }
+   .nav {
     margin-left: 50px;
     max-height: 35px;
     font-size: 12px; 
@@ -328,19 +328,19 @@ li {
         font-size: 13px;
         letter-spacing: 0;
         @media(max-width:1200px) {
-           font-size: 10px;
-       }
-       @media(max-width:900px) {
-           font-size: 8px;
-       }
-       .caret {
+         font-size: 10px;
+     }
+     @media(max-width:900px) {
+         font-size: 8px;
+     }
+     .caret {
         position: absolute;
         right: 8px;
         top: 15px;
         @media(max-width:800px) {
-           right: 8px;
-       }
-   }
+         right: 8px;
+     }
+ }
 }
 &:hover {
     .dropdown-menu {
@@ -398,23 +398,23 @@ li {
             font-size: 14px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-             font-size: 11px;
-         }
-     }
-     .language_li {
-         font-size: 13px;
-         letter-spacing: 0;
-         font-family: 'allerregular';
-         height: 35px;
-         position: absolute;
-         top: 0;
-         left: 0;
-         width: 109px;
-         padding-left: 12px;
-         padding-top:8px;
-         cursor: pointer;
-         background:transparent linear-gradient(0deg, #231F20 35%, #46464A 100%) repeat scroll 0% 0%;
-         &:hover {
+               font-size: 11px;
+           }
+       }
+       .language_li {
+           font-size: 13px;
+           letter-spacing: 0;
+           font-family: 'allerregular';
+           height: 35px;
+           position: absolute;
+           top: 0;
+           left: 0;
+           width: 109px;
+           padding-left: 12px;
+           padding-top:8px;
+           cursor: pointer;
+           background:transparent linear-gradient(0deg, #231F20 35%, #46464A 100%) repeat scroll 0% 0%;
+           &:hover {
             background: #E9204A !important;
             color:#fff;
         }
@@ -439,8 +439,8 @@ li {
     right: 105px;
     padding-left: 20px;
     &:hover {
-     background-color: #E9204A !important;
-     a {
+       background-color: #E9204A !important;
+       a {
         color: #FFF;
     }
 }
@@ -508,9 +508,9 @@ li {
     &:hover {
         #slider-1 {
             h1 {
-               color: #E9204A;
-           } 
-           h2 {
+             color: #E9204A;
+         } 
+         h2 {
             color: #000;
         }
     }
@@ -537,12 +537,12 @@ li {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   height:100%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ height:100%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -555,9 +555,9 @@ li {
 }
 }
 #slider-1 .item h1 {
- color:#898B8E;
+   color:#898B8E;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -610,7 +610,7 @@ li {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -647,28 +647,28 @@ li {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:-5px;
-   -webkit-transition: all 1s ease 0s; 
-   transition: all 1s ease 0s;
-   .btn {
-     display:inline-block;
-     padding-top:5px;
-     font-size:15px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:60px;
-     width:125px;
-     border-radius: 100px 100px 0 0;
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:-5px;
+ -webkit-transition: all 1s ease 0s; 
+ transition: all 1s ease 0s;
+ .btn {
+   display:inline-block;
+   padding-top:5px;
+   font-size:15px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:60px;
+   width:125px;
+   border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -769,9 +769,9 @@ li {
 
         }
         .key {
-           color:#e9214b;
-       }
-   }
+         color:#e9214b;
+     }
+ }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
     height: 100%;
@@ -799,14 +799,14 @@ li {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .quarter, .quarter2 {
     background-color:#f4f5f5 !important;
     &:hover {
-     .overlay{
+       .overlay{
         display:none;
     }
     .outimg {
@@ -1069,16 +1069,16 @@ li {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -1094,14 +1094,14 @@ li {
         }
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
- .last {
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
+   .last {
     border: none;
 }
 }
@@ -1259,7 +1259,7 @@ li {
 }
 
 .footer {
-    height: 370px;
+    height: 370px !important;
     margin-top: 150px;
     @media (max-width: 769px) {
         text-align: center;
@@ -1315,11 +1315,11 @@ li {
             border-bottom: 1px solid #575656; 
             cursor: pointer;
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1499,10 +1499,10 @@ li {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-               color: #e91f4a;   
-           }
-       }
-   }
+             color: #e91f4a;   
+         }
+     }
+ }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1689,10 +1689,10 @@ height: 75px;
 
 }
 .date_filter {
- display: inline;
- margin:0px;
+   display: inline;
+   margin:0px;
 
- .caret {
+   .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1782,19 +1782,19 @@ height: 75px;
     }
 }
 .side-transparent-block {
-   height: 150px;
-   width: 280px;
-   background-color: rgba(0, 0, 0, 0.8);
-   position: absolute;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   top: 0;
-   left: 0;
-   z-index: 9;
-   display: none;
-   @media (max-width: 769px) {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1834,10 +1834,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-             color: #e91f4a;
-         }
-     }
- }
+               color: #e91f4a;
+           }
+       }
+   }
 }
 .subhead {
     h3 {
@@ -1861,26 +1861,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
- display: inline-block;
- margin-left:0px;
- color: #807f7f;
- font-weight: bold;
- padding: 0;
- border: 0px;
- border-left:1px solid #E8E8E7;
- height: 35px;
- border-radius: 0;
- width: 130px;
- -moz-appearance: none;
- -webkit-appearance: none;
- -webkit-border-radius: 0px;
- -moz-border-radius: 0px;
- border-radius: 0px;
- position: absolute;
- background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
- border-right: 10px solid transparent;
+   display: inline-block;
+   margin-left:0px;
+   color: #807f7f;
+   font-weight: bold;
+   padding: 0;
+   border: 0px;
+   border-left:1px solid #E8E8E7;
+   height: 35px;
+   border-radius: 0;
+   width: 130px;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+   border-radius: 0px;
+   position: absolute;
+   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+   border-right: 10px solid transparent;
 
- &:hover {
+   &:hover {
     span {
         color: #FFF;
     }
@@ -2246,8 +2246,8 @@ form .btn {
         font-size: 32px;
     }
     &:hover {
-       background-color: #E9204A;
-   }
+     background-color: #E9204A;
+ }
 }
 .drop {
     height: 5px;
@@ -2281,8 +2281,8 @@ form .btn {
     }
 }
 .yamm {
- display: block;
- @media(max-width: 769px) {
+   display: block;
+   @media(max-width: 769px) {
     display: none;
 }
 }
@@ -2317,14 +2317,11 @@ form .btn {
       height:20px;
       margin: 20px auto;
   }
-//text-align: center;
-.btn {
+  .btn {
     margin: 10px auto;
     float: initial;
     display: block;
     clear: both;
-
-
 }
 .warning {
     color:red;
@@ -2337,10 +2334,9 @@ form .btn {
 }
 }
 ///mobile overwrite
+
 @media(max-width:768px){
-
-
-#section-5 {
+ #section-5 {
     height:100vh !important;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAARklEQVQYV4XQ2wkAIAwDQB1D91/NOkakguKjbfJ9JJAMAImkd0mZQUWl1BgupINu44lc+CITWuiDHrpghDZkaEKRBv2JZQDpyUKXo4UsOAAAAABJRU5ErkJggg==) repeat;
     background-size:20px 20px;
@@ -2415,22 +2411,15 @@ form .btn {
     }
     .foot_wrapper {
 
-        //background:red;
         float: left;
         width: 100%;
 
         background-color: rgba(0,0,0,0);
         .social {
-
             width:100%;
             margin:0px !important;
-           // margin:0 auto;
-           height:30% !important;
-           text-align:center;
-            // display: flex;
-            // align-items:center;
-            // justify-content:center;
-
+            height:30% !important;
+            text-align:center;
             h4 {
                 background-color:#2b2a2a;
                 display: inline-block;
@@ -2454,7 +2443,6 @@ form .btn {
 
     }
     .newsletter {
-
         height:20%;
         p {
          font-size: 1.5em;
@@ -2483,8 +2471,6 @@ form .btn {
 
 }
 }
-
-
 .nav-icons {
     list-style-type:none;
     position: fixed;
@@ -2570,33 +2556,60 @@ form .btn {
         margin-right: 0px;
     }
 }//end nav-icons
-
-
-
-    .mobile-text-center {
-        text-align:center !important;
+.logo {
+    margin-top:20px !important;
+}
+.mobile-text-center {
+    text-align:center !important;
+}
+.mobile-no-padding {
+    padding:0px !important;
+    p {
+        padding: 0px !important;
     }
-    .mobile-no-padding {
-        padding:0px !important;
-        p {
-            padding: 0px !important;
-        }
+}
+.mobile-no-margin {
+    margin:0px !important;
+}
+.mobile-para-padding-child-p {
+    p {
+        padding-left:30px !important;
+        padding-right:30px !important;
     }
-    .mobile-para-padding-child-p {
-        p {
-            padding-left:30px !important;
-            padding-right:30px !important;
-        }
-    }
+}
+.mobile-para-padding {
+ padding-left:30px !important;
+ padding-right:30px !important;
+}
+.mobile-fullwidth {
+    width:100% !important;
+}
+.mobile-height-auto {
+    height: auto !important;
 }
 .head_section {
     height:130px;
 }
+.mobile-padding-child {
+    padding-left:20px !important;
+    padding-right:20px !important;
+}
 .topbanner {
     h2 {
-        line-height: 25px;
-        padding-top: 72px;
+        line-height: 25px !important;
+        padding-top: 72px !important;
     }
+}
+.banner-content {
+    padding-left:20px !important;
+    padding-right:20px !important;
+    h2 {
+        line-height: 25px !important;
+        padding-top: 72px !important;
+
+    }
+
+
 }
 .mobile-mid-nav-inner {
     text-align: center;
@@ -2626,10 +2639,275 @@ form .btn {
             list-style-type: none;
             border: 1px solid rgba(221, 221, 221, 0.6);
             a {
-             color: gray;
-         }
-     }
- }
+               color: gray;
+           }
+       }
+   }
 
 }
+.mobile_project_filter {
+    width:100%;
+    select {
+        width: 100% !important;
+    }
+}
+.mobile-timeline-header {
+    margin:40px;
+    text-align: center;
+}
+.cd-timeline-content {
+    width:98% !important;
+    margin:1% !important;
+}
+#mobile_custom_filters {
+    width: 100%;
+    padding: 10px !important;
+    text-align: center;
+    background: #F2F2F2;
+    font-size: 13px;
+    letter-spacing: 0px;
+    font-family: 'Helvetica';
+    .filter_by {
+        font-size: 15px;
+        font-family: "bree serif";
+        letter-spacing: 1px;
+    }
+    select {
+        list-style-type: none;
+        margin-left:0px;
+        color: #807f7f;
+        font-weight: bold;
+        padding:7px 0px 5px 5px;
+        border: 0px;
+        border-left:3px solid #E8E8E7;
+        height: 35px;
+        border-radius: 0;
+        width: 130px;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        -webkit-border-radius: 0px;
+        background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+        option {
+            position: absolute;
+            top: 0; 
+        }
+    }
+    .gallery_filter_item {
+      cursor: pointer;
+      background-color: #ccc;
+      color: gray;
+      font-weight: bold;
+      -webkit-box-shadow: 0px 6px 5px 0px rgba(221, 221, 221, 0.75);
+      -moz-box-shadow:    0px 6px 5px 0px rgba(221, 221, 221, 0.75);
+      box-shadow:         0px 6px 5px 0px rgba(221, 221, 221, 0.75);
+      padding: 15px 2px;
+      position: relative;
+      border-bottom: 1px solid gray;
+      span {
+        margin:10px;
+        position: absolute;
+        right:30%;
+        bottom:11px;
+    }
+    a {
+        color:gray;
+    }
+}
+}
+.archive {
+    .foot_wrapper {
+        height:50vh !important;
+        .social {
+            height: auto !important;
+        }
+        .newsletter {
+            height: auto !important;
+        }
+        .donate {
+            height: auto !important;
+        }
+    }
+}
+//News page
+.page {
+
+    .foot_wrapper {
+        p {
+            padding: 20px !important;
+        }
+    }
+}
+.content-grid {
+    margin:2% !important;
+}
+//resurce page
+.page-template-page-resource {
+    .img-wrapper {
+        img {
+            width:98% !important;
+            margin: 1% !important;
+        }
+    }
+}
+
+}
+@media screen and (orientation:landscape) {
+    //news page 
+    .content-grid {
+        text-align: center;
+    }
+    .who_we {
+        .check_us {
+            width:48% !important;
+            margin-left: 2% !important;
+            margin-top:1% !important;
+            h1 {
+                margin:0px !important;
+                padding: 0px !important;
+                height:50px !important;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            ul {
+                height: 196px !important;
+            }
+
+        }
+        .foot_wrapper {
+            width: 47.5% !important;
+            float: left;
+            height:100vh !important;
+
+          //  margin-top:1% !important;
+            //margin-left: 2% !important;
+            margin: 0px !important;
+            margin-left:0.5% !important;
+            .social {
+                margin-top: 2% !important;
+                height: 50px !important;
+                float: left;
+
+                h4 {
+                    float: left;
+                    height:100%;
+                    width: 25%;
+                    margin: 0px !important;
+                    padding: 0px !important;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            .newsletter {
+                float: left;
+                width: 99%;
+                height:97px !important;
+              //  margin-left: 0.5%;
+              p {
+                font-size: 16px;
+                height: 100%;
+                background-color:#454446 !important;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+            }
+        }
+        .donate {
+            float: left;
+            width: 99%;
+            height: 97px !important;
+            margin-top:2px;
+                //margin-left:0.5%;
+                p { 
+                    font-size: 16px;
+                    height: 100%;
+                    background-color:#454446 !important;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+        .copyrite {
+            position: absolute;
+            bottom: 0;
+        }
+
+    }
+}
+.newsletter {
+    cursor: pointer;
+}
+.newsletter-popup {
+    position: fixed;
+    top: 0;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    right:0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+    opacity: 0.9;
+    display: none;
+    .close-newsletter {
+        color: #FFF;
+        position: absolute;
+        right: 20px;
+        top:20px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    label {
+        color: #FFF;
+    }
+    input {
+        height: 25px;
+        border: 1px solid #ccc;
+      //  padding: 5px;
+      padding-bottom: 0px !important;
+      color: #807f7f
+  }
+  .button {
+    background-color: #e91f4a !important;
+    color: #FFF !important;
+    border-radius: 0 !important; 
+       // padding: 8px;
+       &:hover {
+        opacity: 0.7;
+    }
+}
+}
+.wpcf7-form {
+    textarea {
+        float: none;
+    }
+    input {
+        //padding: 5px;
+    }
+    .wpcf7-submit {
+        background-color: #e91f4a !important;
+        color: #FFF !important;
+        border-radius: 0 !important; 
+       // padding: 8px;
+       border: none;
+       &:hover {
+        opacity: 0.7;
+    }
+}
+}
+
+
+
+
+
+
+
+
+
+
+
 
