--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -75,6 +75,9 @@ header h1 {
   width: 4px;
   background: #cececd;
   margin-top: 120px;
+  @media (max-width:768px){
+  display: none;
+  }
 }
 @media only screen and (min-width: 1170px) {
   #cd-timeline {
