--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -287,7 +287,7 @@ a:hover {
     }
     .dropdown-menu {
       padding: 0 0 0.5% 8% !important;
-      margin-top: -3px !important;
+      // margin-top: -3px !important;
       ul {
         border-right: 1px Solid rgba(255, 255, 255, 0.21);
         padding-left: 30px;
