--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1471,6 +1471,7 @@ li {
 
     .content {
         margin-bottom: 50px;
+        min-height:429px !important;
         .img-wrapper {
             height: 225px;
             overflow: hidden;   
