--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -2981,6 +2981,10 @@ form .btn {
     .image_wrapper {
         margin-bottom: 40px;
     }
+    ul {
+        margin: 0 auto;
+        text-align: center;
+    }
 
 }
 .js-photostack { position: relative; }
