--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -243,7 +243,7 @@ a:hover {
     height:100%;
     width:100%;
     position:fixed;
-    display:none;
+    display:flex;
     z-index:1000;
     align-items:center;
     justify-content:center;
