--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -2995,6 +2995,17 @@ form .btn {
   left: 0;
   list-style-type: none;
 }
+#swipebox-container {
+    #swipebox-top-bar {
+        top :auto;
+        bottom: 100px;
+        background: transparent;
+text-shadow: 2px 2px 6px rgba(150, 150, 150, 1);    }
+    #swipebox-bottom-bar {
+        bottom: -50px;
+    
+    }
+}
 
 
 
