--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1286,7 +1286,8 @@ li {
 }
 
 .footer {
-    height: 370px !important;
+    height: 50% !important;
+    bottom: 0;
     margin-top: 150px;
     @media (max-width: 769px) {
         text-align: center;
@@ -1315,6 +1316,9 @@ li {
         }
     }
     #fsection1 {
+        ul {
+            height: 150px;
+        }
         @media (max-width: 769px) {
             box-sizing: border;
             border-right: 1px solid #575656; 
